syntax = "proto3";

package secretkeeper;

option go_package = "github.com/Cadeusept/secretkeeper/proto/secretkeeper;secretkeeper";

service SecretKeeper {
  rpc AddKey (AddKeyRequest) returns (AddKeyResponse);
  rpc GetKey (GetKeyRequest) returns (GetKeyResponse);
  rpc UpdateKey (UpdateKeyRequest) returns (UpdateKeyResponse);
}

message AddKeyRequest {
  string user_id = 1;
  string service_id = 2;
  string api_key = 3;
}

message AddKeyResponse {
  bool success = 1;
}

message GetKeyRequest {
  string user_id = 1;
  string service_id = 2;
}

message GetKeyResponse {
  string api_key = 1;
}

message UpdateKeyRequest {
  string user_id = 1;
  string service_id = 2;
  string new_api_key = 3;
}

message UpdateKeyResponse {
  bool success = 1;
}
